# Agi

./: .gitignore
agi/: README.md  __init__.py  cli.py  pyproject.toml
agi/docs/: PUTNAM_ARCHITECTURE.md  ROADMAP.md  memory.md  merging.md  oversight_console.md
agi/memory/: __init__.py  episodic.py
agi/notebooks/: demo.ipynb
agi/src/: agi.py
agi/src/agi/: __init__.py
agi/src/core/: critic.py  executive.py  manifest.py  memory.py  memory_features.py  memory_retrieval.py  orchestrator.py  planner.py  reflection.py  retrieval.py  safety.py  telemetry.py  types.py  types.ts  vector_index.py  world_model.py
agi/src/evals/: harness.py
agi/src/governance/: gatekeeper.py  interactive_gatekeeper.py  policy.yaml
agi/src/memory/: encoders.py  experience.py  reflection_job.py  working.py
agi/src/oversight/: __init__.py  models.py  server.py  store.py
agi/src/prompts/: critic.system.txt  normalize.system.txt  planner.system.txt  summarize.system.txt
agi/src/pydantic/: __init__.py  _fallback.py
agi/src/typer/: __init__.py  _fallback.py  _testing_fallback.py  testing.py
agi/tests/: conftest.py  test_branch_condition_expression.py  test_cli.py  test_dependency_fallbacks.py  test_evals_harness.py  test_executive_agent.py  test_interactive_gatekeeper.py  test_memory.py  test_memory_retrieval.py  test_memory_retriever.py  test_no_merge_conflicts.py  test_orchestrator.py  test_orchestrator_safety.py  test_oversight_store.py  test_planner_contract.py  test_retrieval_tool.py  test_run_manifest.py  test_telemetry.py  test_tool_metadata.py  test_tools_contract.py  test_world_model.py  test_world_model_persistence.py
agi/tests/memory/: test_encoders.py  test_episodic.py  (+3 more)
(+16 files in other folders)
