[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agi"
version = "0.1.0"
description = "AGI v0.1 semantic compiler and experiment runner"
authors = [{name = "OpenAI", email = "opensource@openai.com"}]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "faiss-cpu",
    "pydantic",
    "typer",
    "rich",
]

[project.scripts]
agi-cli = "agi.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "hypothesis",
]

[tool.pytest.ini_options]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["agi"]
